--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -25062,5 +25062,141 @@
         "published": "Mon, 22 Dec 2025 10:34:05 +0000",
         "source": "Digit.in",
         "summary": "Ranveer Singh recently came back on the big screen with Dhurandhar, a spy action thriller that has been grabbing attention since its theatrical release. The film blends large-scale action sequences, intense drama and a fresh take on the Indian spy universe. With a runtime of over three hours, Dhurandhar offers a detailed and dramatic spy [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/japanese-planners-explained/",
+        "title": "The Best Japanese Planners (2026): Hobonichi Techo, Kokuyo Jibun Techo",
+        "link": "https://www.wired.com/story/japanese-planners-explained/",
+        "published": "Mon, 22 Dec 2025 12:09:00 +0000",
+        "source": "WIRED",
+        "summary": "Are Japanese planners like the Hobonichi really better than American planners? Here\u2019s where they differ and why you might want to switch."
+    },
+    {
+        "id": "https://www.wired.com/story/people-are-using-sora-2-to-make-child-fetish-content/",
+        "title": "People Are Using Sora 2 to Make Disturbing Videos With AI-Generated Kids",
+        "link": "https://www.wired.com/story/people-are-using-sora-2-to-make-child-fetish-content/",
+        "published": "Mon, 22 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Videos such as fake ads featuring AI children playing with vibrators or Jeffrey Epstein and Diddy-themed playsets are being made with Sora 2 and posted to TikTok."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/waymo-vehicles-are-operating-again-in-san-francisco-following-a-power-outage-112924838.html?src=rss",
+        "title": "Waymo vehicles are operating again in San Francisco following a power outage",
+        "link": "https://www.engadget.com/transportation/waymo-vehicles-are-operating-again-in-san-francisco-following-a-power-outage-112924838.html?src=rss",
+        "published": "Mon, 22 Dec 2025 11:29:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Waymo has resumed its robo-taxi service in San Francisco after a <a href=\"https://www.engadget.com/transportation/a-san-francisco-power-outage-left-waymos-self-driving-cars-stranded-at-intersections-172316970.html\">power outage </a>stranded vehicles around the city, <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=34e37b9c-8975-48da-aa39-df8bcd5badc3&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=32c52d31-f271-4291-81dd-468c60543476&amp;featureId=t"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-your-tv-cache/",
+        "title": "How to clear your TV cache (and wipe out lag for good)",
+        "link": "https://www.zdnet.com/article/how-to-clear-your-tv-cache/",
+        "published": "Mon, 22 Dec 2025 12:18:00 GMT",
+        "source": "Latest news",
+        "summary": "Clearing your TV's cache can reduce stuttering and improve performance. Here's how to do it on brands like Samsung, LG, and more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tsa-traveling-airport-wifi-public-charging-mistakes/",
+        "title": "TSA's plea: Don't make these airport Wi-Fi and public charging mistakes this holiday",
+        "link": "https://www.zdnet.com/article/tsa-traveling-airport-wifi-public-charging-mistakes/",
+        "published": "Mon, 22 Dec 2025 12:16:00 GMT",
+        "source": "Latest news",
+        "summary": "The TSA recommends safer methods for topping up your device and staying connected. Here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/internet-airport-cellular-vs-wi-fi-speeds-vary-ookla/",
+        "title": "Browsing online at the airport? Here's why I use cellular instead of Wi-Fi (and you should, too)",
+        "link": "https://www.zdnet.com/article/internet-airport-cellular-vs-wi-fi-speeds-vary-ookla/",
+        "published": "Mon, 22 Dec 2025 12:10:00 GMT",
+        "source": "Latest news",
+        "summary": "Your mobile carrier may offer better access than the airport's Wi-Fi, according to tests by Ookla, but results will vary across airports."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-maps-alternative-comaps-hands-on/",
+        "title": "I left Google Maps behind for a free alternative that doesn't track me (or drain my phone battery)",
+        "link": "https://www.zdnet.com/article/google-maps-alternative-comaps-hands-on/",
+        "published": "Mon, 22 Dec 2025 12:06:00 GMT",
+        "source": "Latest news",
+        "summary": "It features voice-guided directions and offline search capabilities, prioritizing privacy at the forefront."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-ipados-26-features-for-mac-users/",
+        "title": "9 essential iPadOS 26 features that convinced me to put my MacBook away for good",
+        "link": "https://www.zdnet.com/article/best-ipados-26-features-for-mac-users/",
+        "published": "Mon, 22 Dec 2025 12:03:00 GMT",
+        "source": "Latest news",
+        "summary": "The latest version of iPadOS feels more Mac-like with several useful multitasking features. Here are the ones I use to stay productive."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-fears-drive-50-rise-in-job-anxiety-in-2025-reveals-astrotalk-data/articleshow/126121617.cms",
+        "title": "AI fears drive 50% rise in job anxiety in 2025, reveals Astrotalk data",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-fears-drive-50-rise-in-job-anxiety-in-2025-reveals-astrotalk-data/articleshow/126121617.cms",
+        "published": "Mon, 22 Dec 2025 17:10:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Career-related anxiety rose by 50 per cent in 2025 as concerns regarding artificial intelligence grew among employees. Data from Astrotalk reveals that \"Is AI going to take my job?\" became the most common question on the platform this year. This trend shows a significant increase in worry about job stability compared to 2024."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/bridging-the-gap-how-tender-truck-is-fixing-indias-broken-trucking-market",
+        "title": "Bridging the gap: How Tender Truck is fixing India\u2019s broken trucking market",
+        "link": "https://yourstory.com/2025/12/bridging-the-gap-how-tender-truck-is-fixing-indias-broken-trucking-market",
+        "published": "Mon, 22 Dec 2025 10:06:14 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Founded in 2020, New Delhi-based startup Tender Truck connects logistics companies directly with verified fleet owners, cutting out brokers and reducing empty truck runs across India."
+    },
+    {
+        "id": "https://inc42.com/buzz/kriti-sanon-invests-in-d2c-supplement-brand-supply6/",
+        "title": "Kriti Sanon Invests In D2C Supplement Brand Supply6",
+        "link": "https://inc42.com/buzz/kriti-sanon-invests-in-d2c-supplement-brand-supply6/",
+        "published": "Mon, 22 Dec 2025 12:21:17 +0000",
+        "source": "Inc42 Media",
+        "summary": "D2C nutrition and wellness startup Supply6 has roped in Bollywood actor Kriti Sanon as an investor and brand ambassador.\u00a0 In&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-tec-india-ai-incident-reporting-standard-telecom/",
+        "title": "India\u2019s Telecom Regulator Introduces a Framework to Document AI Incidents: What It Means",
+        "link": "https://www.medianama.com/2025/12/223-tec-india-ai-incident-reporting-standard-telecom/",
+        "published": "Mon, 22 Dec 2025 12:08:37 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>India has released a technical standard to document AI failures and harms in telecom networks. The framework focuses on how incidents are recorded, not how AI systems are regulated.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-tec-india-ai-incident-reporting-standard-telecom/\">India\u2019s Telecom Regulator Introduces a Framework to Document AI Incidents: What It Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.digit.in/te/news/mobile-phones/motorola-edge-70-complete-information-know-before-tomorrow-first-sale.html",
+        "title": "MOTOROLA Edge 70 \u0c2b\u0c38\u0c4d\u0c1f\u0c4d \u0c38\u0c47\u0c32\u0c4d \u0c15\u0c02\u0c1f\u0c47 \u0c2e\u0c41\u0c02\u0c26\u0c41 \u0c2e\u0c40\u0c30\u0c41 \u0c24\u0c46\u0c32\u0c41\u0c38\u0c41\u0c15\u0c4b\u0c35\u0c3e\u0c32\u0c4d\u0c38\u0c3f\u0c28 \u0c15\u0c02\u0c2a\u0c4d\u0c32\u0c40\u0c1f\u0c4d \u0c07\u0c28\u0c4d\u0c2b\u0c30\u0c4d\u0c2e\u0c47\u0c37\u0c28\u0c4d.!",
+        "link": "https://www.digit.in/te/news/mobile-phones/motorola-edge-70-complete-information-know-before-tomorrow-first-sale.html",
+        "published": "Mon, 22 Dec 2025 12:19:36 +0000",
+        "source": "Digit.in",
+        "summary": "MOTOROLA Edge 70 \u0c2b\u0c38\u0c4d\u0c1f\u0c4d \u0c38\u0c47\u0c32\u0c4d \u0c15\u0c02\u0c1f\u0c47 \u0c2e\u0c41\u0c02\u0c26\u0c41 \u0c2e\u0c40\u0c30\u0c41 \u0c24\u0c46\u0c32\u0c41\u0c38\u0c41\u0c15\u0c4b\u0c35\u0c3e\u0c32\u0c4d\u0c38\u0c3f\u0c28 \u0c15\u0c02\u0c2a\u0c4d\u0c32\u0c40\u0c1f\u0c4d \u0c07\u0c28\u0c4d\u0c2b\u0c30\u0c4d\u0c2e\u0c47\u0c37\u0c28\u0c4d, \u0c08\u0c30\u0c4b\u0c1c\u0c41 \u0c2a\u0c4d\u0c30\u0c24\u0c4d\u0c2f\u0c47\u0c15\u0c02\u0c17\u0c3e \u0c05\u0c02\u0c26\u0c3f\u0c38\u0c4d\u0c24\u0c41\u0c28\u0c4d\u0c28\u0c3e\u0c2e\u0c41. \u0c08 \u0c2b\u0c4b\u0c28\u0c4d \u0c30\u0c47\u0c2a\u0c41 \u0c2e\u0c27\u0c4d\u0c2f\u0c3e\u0c39\u0c4d\u0c28\u0c02 12 \u0c17\u0c02\u0c1f\u0c32 \u0c28\u0c41\u0c02\u0c1a\u0c3f \u0c38\u0c47\u0c32\u0c4d \u0c15\u0c3f \u0c05\u0c02\u0c26\u0c41\u0c2c\u0c3e\u0c1f\u0c41\u0c32\u0c4b\u0c15\u0c3f \u0c35\u0c38\u0c4d\u0c24\u0c41\u0c02\u0c26\u0c3f. \u0c05\u0c02\u0c26\u0c41\u0c15\u0c47, \u0c08 \u0c2b\u0c4b\u0c28\u0c4d \u0c15\u0c4a\u0c28\u0c21\u0c3e\u0c28\u0c3f\u0c15\u0c3f \u0c2e\u0c41\u0c02\u0c26\u0c41\u0c17\u0c3e \u0c08 \u0c2b\u0c4b\u0c28\u0c4d \u0c17\u0c41\u0c30\u0c3f\u0c02\u0c1a\u0c3f \u0c2e\u0c40\u0c30\u0c41 \u0c24\u0c46\u0c32\u0c41\u0c38\u0c41\u0c15\u0c4b\u0c35\u0c3e\u0c32\u0c4d\u0c38\u0c3f\u0c28 \u0c2b\u0c40\u0c1a\u0c30\u0c4d\u0c38\u0c4d, \u0c2a\u0c4d\u0c30\u0c48\u0c38\u0c4d \u0c2e\u0c30\u0c3f\u0c2f\u0c41 \u0c06\u0c2b\u0c30\u0c4d \u0c35\u0c02\u0c1f\u0c3f \u0c2a\u0c42\u0c30\u0c4d\u0c24\u0c3f \u0c38\u0c2e\u0c3e\u0c1a\u0c3e\u0c30\u0c02 \u0c08\u0c30\u0c4b\u0c1c\u0c41 \u0c38\u0c35\u0c3f\u0c35\u0c30\u0c02\u0c17\u0c3e \u0c05\u0c02\u0c26\u0c3f\u0c02\u0c1a\u0c3e\u0c2e\u0c41. Survey \u2705 Thank you for completing the survey! MOTOROLA Edge [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/ta/news/mobile-phones/samsung-galaxy-s25-ultra-5g-huge-bank-offer-upto-rs-11000-discount-on-amazon-know-all.html",
+        "title": "200MP \u0b95\u0bc7\u0bae\u0bb0\u0bbe \u0b95\u0bca\u0ba3\u0bcd\u0b9f Samsung \u0baf\u0bbf\u0ba9\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0bb8\u0bcd\u0b9f\u0bc8\u0bb2\u0bbf\u0bb7\u0bcd \u0baa\u0bcb\u0ba9\u0bbf\u0bb2\u0bcd \u0b85\u0ba4\u0bbf\u0bb0\u0b9f\u0bbf\u0baf\u0bbe\u0b95 \u0bb0\u0bc2,11000 \u0baa\u0bc7\u0b99\u0bcd\u0b95\u0bcd \u0b86\u0baa\u0bb0\u0bcd",
+        "link": "https://www.digit.in/ta/news/mobile-phones/samsung-galaxy-s25-ultra-5g-huge-bank-offer-upto-rs-11000-discount-on-amazon-know-all.html",
+        "published": "Mon, 22 Dec 2025 12:01:30 +0000",
+        "source": "Digit.in",
+        "summary": "\u0ba8\u0bc0\u0b99\u0bcd\u0b95\u0bb3\u0bcd Samsung \u0baa\u0bbf\u0bb0\u0bbf\u0baf\u0bb0\u0bbe\u0b95 \u0b87\u0bb0\u0bc1\u0ba8\u0bcd\u0ba4\u0bbe\u0bb2\u0bcd Samsung Galaxy S25 Ultra 5G \u0baa\u0bcb\u0ba9\u0bbf\u0bb2\u0bcd \u0ba4\u0bb1\u0bcd\u0baa\u0bca\u0bb4\u0bc1\u0ba4\u0bc1 \u0b87-\u0b95\u0bbe\u0bae\u0bb0\u0bcd\u0bb8\u0bcd \u0ba4\u0bb3\u0bae\u0bbe\u0ba9 \u0b85\u0bae\u0bc7\u0b9a\u0bbe\u0ba9\u0bbf\u0bb2\u0bcd \u0baa\u0bc7\u0b99\u0bcd\u0b95\u0bcd \u0b86\u0baa\u0bb0\u0bbf\u0ba9\u0bcd \u0b95\u0bc0\u0bb4\u0bcd \u0bb0\u0bc2,i1000 \u0b9f\u0bbf\u0bb8\u0bcd\u0b95\u0bb5\u0bc1\u0ba3\u0bcd\u0b9f\u0bcd \u0bb5\u0bb4\u0b99\u0bcd\u0b95\u0baa\u0bcd\u0baa\u0b9f\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1 \u0bae\u0bc7\u0bb2\u0bc1\u0bae\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0baa\u0bcb\u0ba9\u0bbf\u0bb2\u0bcd \u0bb5\u0bbf\u0bb2\u0bc8 \u0bb0\u0bc2,1,29,999 \u0b86\u0b95\u0bc1\u0bae\u0bcd \u0b86\u0ba9\u0bbe\u0bb2\u0bcd \u0b87\u0baa\u0bcd\u0baa\u0bca\u0bb4\u0bc1\u0ba4\u0bc1 \u0b87\u0ba8\u0bcd\u0ba4 \u0baa\u0bcb\u0ba9\u0bc8 \u0bae\u0bbf\u0b95 \u0b9a\u0bbf\u0bb1\u0ba8\u0bcd\u0ba4 \u0b9f\u0bbf\u0b9a\u0bcd\u0b95\u0bb5\u0bc1\u0ba3\u0bcd\u0b9f\u0bbf\u0ba9\u0bcd \u0b95\u0bc0\u0bb4\u0bcd \u0b95\u0bc1\u0bb1\u0bc8\u0ba8\u0bcd\u0ba4 \u0bb5\u0bbf\u0bb2\u0bc8\u0baf\u0bbf\u0bb2\u0bcd \u0bb5\u0bbe\u0b99\u0bcd\u0b95\u0bb2\u0bbe\u0bae\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0baa\u0bcb\u0ba9\u0bbf\u0bb2\u0bcd 200MP \u0b95\u0bc7\u0bae\u0bb0\u0bbe \u0bae\u0b9f\u0bcd\u0b9f\u0bc1\u0bae\u0bbf\u0bb2\u0bcd\u0bb2\u0bbe\u0bae\u0bb2\u0bcd S \u0baa\u0bc7\u0ba9\u0bcd \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd \u0ba8\u0bc0\u0ba3\u0bcd\u0b9f \u0ba8\u0bbe\u0bb3\u0bcd \u0baa\u0bc7\u0b9f\u0bcd\u0b9f\u0bb0\u0bbf \u0bb2\u0bc8\u0baa\u0bcd \u0baa\u0bcb\u0ba9\u0bcd\u0bb1\u0bb5\u0bb1\u0bcd\u0bb1\u0bc8 \u0bb5\u0bb4\u0b99\u0bcd\u0b95\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1 \u0bae\u0bc7\u0bb2\u0bc1\u0bae\u0bcd \u0b87\u0ba4\u0ba9\u0bcd \u0b86\u0baa\u0bb0\u0bcd \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/hi/news/general/govt-warning-delete-three-screen-sharing-app-from-mobile-fraud-alert.html",
+        "title": "\u092b\u094b\u0928 \u0938\u0947 \u0924\u0941\u0930\u0902\u0924 \u0921\u093f\u0932\u0940\u091f \u0915\u0930 \u0926\u0947\u0902 \u092f\u0947 3 \u0910\u092a\u094d\u0938, \u092e\u094b\u0926\u0940 \u0938\u0930\u0915\u093e\u0930 \u0928\u0947 \u0926\u0940 \u091a\u0947\u0924\u093e\u0935\u0928\u0940! \u0939\u0948\u0915\u0930\u094d\u0938 \u091a\u0941\u091f\u0915\u093f\u092f\u094b\u0902 \u092e\u0947\u0902 \u0916\u093e\u0932\u0940 \u0915\u0930 \u0926\u0947\u0902\u0917\u0947 \u092c\u0948\u0902\u0915 \u0905\u0915\u093e\u0909\u0902\u091f",
+        "link": "https://www.digit.in/hi/news/general/govt-warning-delete-three-screen-sharing-app-from-mobile-fraud-alert.html",
+        "published": "Mon, 22 Dec 2025 11:47:21 +0000",
+        "source": "Digit.in",
+        "summary": "\u0906\u091c\u0915\u0932 \u0938\u094d\u092e\u093e\u0930\u094d\u091f\u092b\u094b\u0928 \u0939\u092e\u093e\u0930\u0940 \u091c\u093f\u0902\u0926\u0917\u0940 \u0915\u093e \u0930\u093f\u092e\u094b\u091f \u0915\u0902\u091f\u094d\u0930\u094b\u0932 \u092c\u0928 \u0917\u092f\u093e \u0939\u0948. \u092c\u0948\u0902\u0915\u093f\u0902\u0917 \u0938\u0947 \u0932\u0947\u0915\u0930 \u0936\u0949\u092a\u093f\u0902\u0917 \u0924\u0915, \u0938\u092c \u0915\u0941\u091b \u092c\u0938 \u090f\u0915 \u0915\u094d\u0932\u093f\u0915 \u092a\u0930 \u0939\u094b \u091c\u093e\u0924\u093e \u0939\u0948. \u0932\u0947\u0915\u093f\u0928 \u0907\u0938\u0940 \u0938\u0941\u0935\u093f\u0927\u093e \u0915\u0947 \u0938\u093e\u0925 \u090f\u0915 \u092c\u0939\u0941\u0924 \u092c\u0921\u093c\u093e \u0916\u0924\u0930\u093e \u092d\u0940 \u0906\u092f\u093e \u0939\u0948 \u0911\u0928\u0932\u093e\u0907\u0928 \u092b\u094d\u0930\u0949\u0921 \u0915\u093e. \u0938\u094d\u0915\u0948\u092e\u0930\u094d\u0938 \u0905\u092c \u0928\u090f-\u0928\u090f \u0924\u0930\u0940\u0915\u0947 \u0905\u092a\u0928\u093e \u0930\u0939\u0947 \u0939\u0948\u0902 \u0914\u0930 \u0906\u092a\u0915\u0940 \u090f\u0915 \u091b\u094b\u091f\u0940 \u0938\u0940 \u0917\u0932\u0924\u0940 \u0938\u0947 \u0906\u092a\u0915\u093e \u092a\u0942\u0930\u093e [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/features/gaming/clair-obscur-expedition-33s-disqualification-shows-the-ai-rule-problem-in-games.html",
+        "title": "Clair Obscur: Expedition 33\u2019s disqualification shows the AI rule problem in games",
+        "link": "https://www.digit.in/features/gaming/clair-obscur-expedition-33s-disqualification-shows-the-ai-rule-problem-in-games.html",
+        "published": "Mon, 22 Dec 2025 11:46:40 +0000",
+        "source": "Digit.in",
+        "summary": "The indie games community rarely agrees on anything, but the disqualification of Clair Obscur: Expedition 33 from the Indie Game Awards has come close. What began as a widely celebrated awards sweep quickly evolved into a debate about artificial intelligence, transparency, and whether current rules reflect how games are actually made in 2025. Survey \u2705 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/kn/news/general/christmas-gifts-2025-give-the-best-affordable-gifts-to-your-loved-ones-this-holiday-season.html",
+        "title": "Christmas Gifts 2025: \u0c88 \u0c95\u0ccd\u0cb0\u0cbf\u0cb8\u0ccd\u200c\u0cae\u0cb8\u0ccd\u200c \u0c86\u0c9a\u0cb0\u0ca3\u0cc6\u0caf\u0cb2\u0ccd\u0cb2\u0cbf \u0ca8\u0cbf\u0cae\u0ccd\u0cae \u0caa\u0ccd\u0cb0\u0cc0\u0ca4\u0cbf\u0caa\u0cbe\u0ca4\u0ccd\u0cb0\u0cb0\u0cbf\u0c97\u0cc6 \u0c85\u0ca4\u0ccd\u0caf\u0cc1\u0ca4\u0ccd\u0ca4\u0cae\u0cb5\u0cbe\u0ca6 \u0c97\u0cbf\u0cab\u0ccd\u0c9f\u0ccd \u0ca8\u0cc0\u0ca1\u0cac\u0cb9\u0cc1\u0ca6\u0cc1",
+        "link": "https://www.digit.in/kn/news/general/christmas-gifts-2025-give-the-best-affordable-gifts-to-your-loved-ones-this-holiday-season.html",
+        "published": "Mon, 22 Dec 2025 11:39:52 +0000",
+        "source": "Digit.in",
+        "summary": "Christmas Gifts 2025: \u0c88 \u0cb5\u0cb0\u0ccd\u0cb7\u0ca6 \u0c95\u0ccd\u0cb0\u0cbf\u0cb8\u0ccd\u200c\u0cae\u0cb8\u0ccd \u0cb9\u0cac\u0ccd\u0cac \u0c95\u0cc6\u0cb2\u0cb5\u0cc7 \u0ca6\u0cbf\u0ca8\u0c97\u0cb3 \u0ca6\u0cc2\u0cb0\u0ca6\u0cb2\u0ccd\u0cb2\u0cbf\u0ca6\u0cc6 \u0c86\u0ca6\u0ccd\u0ca6\u0cb0\u0cbf\u0c82\u0ca6 \u0c95\u0cc1\u0c9f\u0cc1\u0c82\u0cac \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 \u0cb8\u0ccd\u0ca8\u0cc7\u0cb9\u0cbf\u0ca4\u0cb0\u0cbf\u0c97\u0cc6 \u0c89\u0ca4\u0ccd\u0ca4\u0cae \u0ca4\u0c82\u0ca4\u0ccd\u0cb0\u0c9c\u0ccd\u0c9e\u0cbe\u0ca8 \u0c89\u0ca1\u0cc1\u0c97\u0cca\u0cb0\u0cc6\u0c97\u0cb3\u0ca8\u0ccd\u0ca8\u0cc1 \u0cb9\u0cc1\u0ca1\u0cc1\u0c95\u0cb2\u0cc1 \u0caa\u0ccd\u0cb0\u0cbe\u0cb0\u0c82\u0cad\u0cbf\u0cb8\u0cb2\u0cc1 \u0c87\u0ca6\u0cc1 \u0c8e\u0c82\u0ca6\u0cbf\u0c97\u0cc2 \u0cae\u0cc1\u0c82\u0c9a\u0cc6\u0caf\u0cc7 \u0c85\u0cb2\u0ccd\u0cb2. \u0c87\u0ca6\u0cb0\u0cb2\u0ccd\u0cb2\u0cbf Gaming Consol, Smart TV, Smartphone, Earbuds \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 Smart Watches \u0c88 \u0cb5\u0cb0\u0ccd\u0cb7\u0ca6 \u0c85\u0ca4\u0ccd\u0caf\u0c82\u0ca4 \u0c9c\u0ca8\u0caa\u0ccd\u0cb0\u0cbf\u0caf \u0cb5\u0cb8\u0ccd\u0ca4\u0cc1\u0c97\u0cb3\u0cb2\u0ccd\u0cb2\u0cbf \u0cb8\u0cc7\u0cb0\u0cbf\u0cb5\u0cc6. \u0c86\u0ca6\u0cb0\u0cc6 \u0c88 \u0cb0\u0c9c\u0cbe\u0ca6\u0cbf\u0ca8\u0c97\u0cb3\u0cb2\u0ccd\u0cb2\u0cbf \u0caa\u0ccd\u0cb0\u0ca4\u0cbf \u0cac\u0c9c\u0cc6\u0c9f\u0ccd \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 \u0cb0\u0cc1\u0c9a\u0cbf\u0c97\u0cc6 \u0ca4\u0c95\u0ccd\u0c95\u0c82\u0ca4\u0cc6 \u0cb8\u0cbe\u0c95\u0cb7\u0ccd\u0c9f\u0cc1 \u0c89\u0ca4\u0ccd\u0ca4\u0cae \u0cb8\u0ccd\u0cae\u0cbe\u0cb0\u0ccd\u0c9f\u0ccd \u0cb9\u0ccb\u0cae\u0ccd \u0c97\u0ccd\u0caf\u0cbe\u0c9c\u0cc6\u0c9f\u0ccd\u200c\u0c97\u0cb3\u0cc1 \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 \u0cae\u0ccb\u0c9c\u0cbf\u0ca8 \u0ca4\u0c82\u0ca4\u0ccd\u0cb0\u0c9c\u0ccd\u0c9e\u0cbe\u0ca8 [&#8230;]"
     }
 ]
